fixed horizontal scroll

--- a/SASS/SASS_NODE/css/estilos.css
+++ b/SASS/SASS_NODE/css/estilos.css
@@ -307,8 +307,7 @@ a:hover {
   text-align: center; }
   .menu__header {
     font-weight: 400;
-    font-size: 40px;
-    padding: 20px; }
+    font-size: 40px; }
   .menu__item {
     width: 300px;
     text-align: center;
