--- a/SASS/SASS_NODE/sass/parciales/_extras.scss
+++ b/SASS/SASS_NODE/sass/parciales/_extras.scss
@@ -76,7 +76,6 @@
     &__header {
         font-weight:400;
         font-size: 40px;
-        padding: 20px;
     }
     &__item {
         width: 300px;
